--- a/Rotavirus/Rotavirus.csproj
+++ b/Rotavirus/Rotavirus.csproj
@@ -6,4 +6,8 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Knapcode.TorSharp" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
